--- a/package.json
+++ b/package.json
@@ -34,34 +34,34 @@
     "types": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@remix-run/node": "^1.14.0"
+    "@remix-run/node": ">=1.19.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.9",
+    "@babel/eslint-parser": "^7.22.10",
     "@babel/plugin-syntax-import-assertions": "^7.22.5",
     "@flysas-tech/adg-jest-config": "1.4.0",
     "@flysas-tech/adg-lint-staged-config": "1.3.0",
     "@flysas-tech/eslint-config-adg": "1.3.0",
-    "@remix-run/node": "^1.18.1",
-    "@tsconfig/node-lts": "^18.12.3",
+    "@remix-run/node": "^1.19.3",
+    "@tsconfig/node-lts": "^18.12.4",
     "cross-env": "^7.0.3",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-jsdoc": "^46.4.4",
-    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-jsdoc": "^46.5.0",
+    "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-ramda": "^2.5.1",
     "eslint-plugin-security-node": "^1.1.1",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-unicorn": "^48.0.0",
-    "jest": "^29.6.1",
-    "jest-extended": "^4.0.0",
-    "prettier": "^3.0.0",
+    "eslint-plugin-unicorn": "^48.0.1",
+    "jest": "^29.6.3",
+    "jest-extended": "^4.0.1",
+    "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   },
   "engines": {
