--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/flysas-tech/adg-tango.git",
-    "directory": "packages/create-remix-azure-adapter"
+    "url": "https://github.com/scandinavianairlines/remix-azure-functions"
   },
-  "license": "UNLICENSED",
+  "license": "MIT",
   "author": "Airline Digitalization <airlinedigitalization@flysas.com>",
   "type": "module",
   "exports": "./index.js",
@@ -30,42 +29,57 @@
     "format": "prettier --write index.js \"src/**/*.js\"",
     "lint": "TIMING=1 eslint --fix *.js src/",
     "prepublishOnly": "tsc --emitDeclarationOnly",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest 'src/' --env=node --colors --bail --detectOpenHandles --errorOnDeprecated --setupFilesAfterEnv=jest-extended/all --clearMocks --noStackTrace",
+    "test": "vitest run --coverage",
     "types": "tsc --noEmit"
   },
   "peerDependencies": {
     "@remix-run/node": ">=1.19.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.15",
-    "@babel/plugin-syntax-import-assertions": "^7.22.5",
-    "@flysas-tech/adg-jest-config": "1.5.2",
-    "@flysas-tech/adg-lint-staged-config": "1.4.2",
-    "@flysas-tech/eslint-config-adg": "1.4.2",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cz-commitlint": "^18.4.3",
+    "@flysas-tech/adg-lint-staged-config": "^1.4.2",
+    "@flysas-tech/adg-toolbox": "^1.10.3",
+    "@flysas-tech/eslint-config-adg": "^1.4.2",
     "@remix-run/node": "^1.19.3",
-    "@tsconfig/node-lts": "^18.12.5",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@tsconfig/node-lts": "^20.1.1",
+    "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.4.2",
-    "eslint-plugin-jsdoc": "^46.8.2",
-    "eslint-plugin-n": "^16.2.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-turbo": "^1.11.2",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-disable": "^2.0.3",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-jsdoc": "^47.0.2",
+    "eslint-plugin-n": "^16.6.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-ramda": "^2.5.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-security-node": "^1.1.1",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "jest": "^29.7.0",
-    "jest-extended": "^4.0.2",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "eslint-plugin-unicorn": "^50.0.1",
+    "eslint-plugin-vitest": "^0.3.20",
+    "inquirer": "^8.2.6",
+    "lint-staged": "^15.2.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.1.1",
+    "ramda": "^0.29.1",
+    "typescript": "^5.2.2",
+    "vitest": "^1.1.1"
   },
   "engines": {
-    "node": ">= 18",
-    "yarn": ">= 3.2.0"
-  }
+    "node": ">= 20"
+  },
+  "packageManager": "yarn@4.0.2"
 }
