feat(adapter): implement remix.run azure adapter
Co-authored-by: Mette Nordqvist <mettson@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ coverage
 build/Release
 
 # Dependency directories
-node_modules/
+**/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -157,3 +157,4 @@ __azurite_db*__.json
 .secrets
 appsettings.json
 local.settings.json
+examples/**/.yarn
