--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@flysas-tech/create-remix-azure-adapter",
-  "version": "1.3.2",
+  "name": "@scandinavianairlines/remix-azure-functions",
+  "version": "0.0.0",
   "description": "A package that adapts requests between azure and remix",
   "keywords": [
-    "function",
+    "adapter",
     "azure",
-    "remix"
+    "functions",
+    "remix-run",
+    "serverless"
   ],
   "repository": {
     "type": "git",
@@ -16,35 +18,38 @@
   "type": "module",
   "exports": "./index.js",
   "files": [
-    "!src/**/*.test.js",
     "CHANGELOG.md",
-    "index.js",
     "index.d.ts",
+    "index.js",
     "README.md",
-    "src/**/*.js",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/is-binary-type.js",
+    "src/server.js"
   ],
   "types": "./index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "format": "prettier --write index.js \"src/**/*.js\"",
     "lint": "TIMING=1 eslint --fix *.js src/",
     "prepublishOnly": "tsc --emitDeclarationOnly",
-    "test": "vitest run --coverage",
+    "test": "vitest --coverage",
     "types": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@remix-run/node": ">=1.19.0"
+    "@remix-run/node": ">=2.0.0"
   },
   "devDependencies": {
+    "@azure/functions": "^4.1.0",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@commitlint/cz-commitlint": "^18.4.3",
     "@flysas-tech/adg-lint-staged-config": "^1.4.2",
     "@flysas-tech/adg-toolbox": "^1.10.3",
     "@flysas-tech/eslint-config-adg": "^1.4.2",
-    "@remix-run/node": "^1.19.3",
+    "@remix-run/node": "^2.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node-lts": "^20.1.1",
+    "@vitest/coverage-v8": "^1.1.3",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
@@ -57,14 +62,14 @@
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-jsdoc": "^47.0.2",
+    "eslint-plugin-jsdoc": "^48.0.2",
     "eslint-plugin-n": "^16.6.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-ramda": "^2.5.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-security-node": "^1.1.1",
+    "eslint-plugin-security-node": "^1.1.4",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-testing-library": "^6.2.0",
@@ -75,11 +80,11 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "ramda": "^0.29.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "vitest": "^1.1.1"
   },
   "engines": {
-    "node": ">= 20"
+    "node": ">= 18"
   },
   "packageManager": "yarn@4.0.2"
 }
