chore(tools): setup husky, eslint, prettier, lint-staged and types

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,12 +1,6 @@
 {
   "extends": ["@commitlint/config-conventional"],
   "rules": {
-    "body-max-line-length": [2, "always", 250],
-    "references-empty": [2, "never"]
-  },
-  "parserPreset": {
-    "parserOpts": {
-      "issuePrefixes": ["([A-Z]{2,5})-([0-9]{1,4})"]
-    }
+    "body-max-line-length": [2, "always", 250]
   }
 }
