--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,78 @@
 {
-  "extends": ["@flysas-tech/eslint-config-adg/node"],
-  "root": true
+  "extends": [
+    "standard",
+    "plugin:vitest/recommended",
+    "plugin:import/errors",
+    "plugin:jsdoc/recommended-typescript-flavor-error",
+    "plugin:unicorn/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "root": true,
+  "ignorePatterns": ["coverage"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "impliedStrict": true,
+    "sourceType": "module"
+  },
+  "plugins": ["import", "disable", "jsdoc", "unicorn", "sort-destructure-keys", "vitest", "node"],
+  "env": {
+    "node": true
+  },
+  "settings": {
+    "jsdoc": {
+      "mode": "typescript"
+    }
+  },
+  "processor": "disable/disable",
+  "overrides": [
+    {
+      // Disable `jsdoc` rules for test files
+      "files": ["**/?(*.)+(spec|test).?(m)[jt]s?(x)"],
+      "rules": {
+        "unicorn/error-message": "off",
+        "unicorn/no-null": "off",
+        "unicorn/prevent-abbreviations": "off",
+        "unicorn/consistent-function-scoping": "off"
+      },
+      "settings": {
+        "disable/plugins": ["jsdoc"]
+      }
+    }
+  ],
+  "rules": {
+    "unicorn/no-array-callback-reference": "off",
+    "unicorn/no-keyword-prefix": "off",
+    "unicorn/no-process-exit": "off",
+    "unicorn/prefer-spread": "off",
+    "unicorn/expiring-todo-comments": "off",
+    "unicorn/string-content": "off",
+    "unicorn/prefer-set-has": "off",
+    "unicorn/no-array-reduce": "off",
+    "unicorn/no-useless-undefined": "off",
+    "unicorn/import-style": "off",
+    "unicorn/no-array-for-each": "off",
+    "unicorn/prefer-object-has-own": "off",
+    "unicorn/prefer-at": "off",
+    "unicorn/prefer-top-level-await": "off",
+    "unicorn/template-indent": "off",
+    "unicorn/require-post-message-target-origin": "off",
+    "unicorn/no-nested-ternary": "off",
+    "unicorn/prevent-abbreviations": [
+      "error",
+      {
+        "checkDefaultAndNamespaceImports": false,
+        "checkShorthandImports": false,
+        "allowList": {
+          "props": true,
+          "prop": true,
+          "Prop": true,
+          "Props": true
+        }
+      }
+    ],
+    "strict": "error",
+    "sort-destructure-keys/sort-destructure-keys": 2,
+    "n/file-extension-in-import": ["error", "always"],
+    "n/no-missing-import": "warn"
+  }
 }
