--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@scandinavianairlines/remix-azure-functions",
   "version": "0.0.0",
-  "description": "A package that adapts requests between azure and remix",
+  "description": "A package that adapts requests between Azure Functions and Remix.run",
   "keywords": [
     "adapter",
     "azure",
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/scandinavianairlines/remix-azure-functions"
+    "url": "git+https://github.com/scandinavianairlines/remix-azure-functions.git"
   },
   "license": "MIT",
   "author": "Airline Digitalization <airlinedigitalization@flysas.com>",
@@ -22,66 +22,66 @@
     "index.d.ts",
     "index.js",
     "README.md",
-    "src/**/*.d.ts",
     "src/is-binary-type.js",
-    "src/server.js"
+    "src/server.js",
+    "types/**/*.d.ts"
   ],
-  "types": "./index.d.ts",
+  "types": "./types/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "format": "prettier --write index.js \"src/**/*.js\"",
     "lint": "TIMING=1 eslint --fix *.js src/",
+    "postinstall": "husky install",
+    "postpack": "pinst --enable",
+    "prepack": "pinst --disable",
     "prepublishOnly": "tsc --emitDeclarationOnly",
     "test": "vitest --coverage",
-    "types": "tsc --noEmit"
+    "types": "tsc --noEmit --checkJs"
   },
   "peerDependencies": {
+    "@azure/functions": ">=4.0.0",
     "@remix-run/node": ">=2.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@azure/functions": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@azure/functions": "^4.1.0",
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@commitlint/cz-commitlint": "^18.4.3",
-    "@flysas-tech/adg-lint-staged-config": "^1.4.2",
-    "@flysas-tech/adg-toolbox": "^1.10.3",
-    "@flysas-tech/eslint-config-adg": "^1.4.2",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/cz-commitlint": "^18.4.4",
     "@remix-run/node": "^2.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node-lts": "^20.1.1",
     "@vitest/coverage-v8": "^1.1.3",
     "commitizen": "^4.3.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-turbo": "^1.11.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-disable": "^2.0.3",
-    "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jsdoc": "^48.0.2",
-    "eslint-plugin-n": "^16.6.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-security-node": "^1.1.4",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-unicorn": "^50.0.1",
     "eslint-plugin-vitest": "^0.3.20",
+    "husky": "^8.0.3",
     "inquirer": "^8.2.6",
     "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
+    "pinst": "^3.0.0",
     "prettier": "^3.1.1",
     "ramda": "^0.29.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.1"
+    "vitest": "^1.1.3"
   },
   "engines": {
     "node": ">= 18"
