ci(release): set git name and email

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,6 +38,10 @@ jobs:
         run: yarn install --immutable --immutable-cache --check-cache
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
+      - name: Setup git user
+        run: |
+          git config --global user.email ${{ vars.GANDALF_EMAIL }}
+          git config --global user.name ${{ vars.GANDALF_NAME }}
       - name: Semantic release
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
