--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,12 +38,12 @@ jobs:
         run: yarn install --immutable --immutable-cache --check-cache
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
-      - name: Setup git user
-        run: |
-          git config --global user.email ${{ vars.GANDALF_EMAIL }}
-          git config --global user.name ${{ vars.GANDALF_NAME }}
       - name: Semantic release
         env:
+          GIT_AUTHOR_NAME: ${{ vars.GANDALF_NAME }}
+          GIT_AUTHOR_EMAIL: ${{ vars.GANDALF_EMAIL }}
+          GIT_COMMITTER_NAME: ${{ vars.GANDALF_NAME }}
+          GIT_COMMITTER_EMAIL: ${{ vars.GANDALF_EMAIL }}
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           HUSKY: 0
