docs(static-web-apps): make the example deployable

--- a/examples/azure-staticwebapp/package.json
+++ b/examples/azure-staticwebapp/package.json
@@ -3,32 +3,29 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
-  "main": "./server/handler.js",
   "scripts": {
     "build": "remix build",
     "dev": "run-p 'dev:*'",
     "dev:swa": "swa start ./public --run \"remix watch\" --api-location server/ --port 3000 --api-devserver-url http://127.0.0.1:3030",
-    "dev:function": "func start --cors-credentials --port 3030",
+    "dev:function": "func start --prefix server/ --cors-credentials --port 3030",
+    "deploy": "swa deploy ",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/css-bundle": "^2.4.1",
-    "@remix-run/node": "^2.4.1",
-    "@remix-run/react": "^2.4.1",
-    "@remix-run/serve": "^2.4.1",
-    "@scandinavianairlines/remix-azure-functions": "^0.0.0",
-    "@vanilla-extract/css": "^1.14.0",
-    "@vanilla-extract/recipes": "^0.5.1",
+    "@remix-run/css-bundle": "^2.5.0",
+    "@remix-run/node": "^2.5.0",
+    "@remix-run/react": "^2.5.0",
+    "@remix-run/serve": "^2.5.0",
+    "@scandinavianairlines/remix-azure-functions": "^1.0.1",
     "isbot": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@azure/functions": "^4.1.0",
     "@azure/static-web-apps-cli": "^1.1.6",
-    "@remix-run/dev": "^2.4.1",
-    "@remix-run/eslint-config": "^2.4.1",
+    "@remix-run/dev": "^2.5.0",
+    "@remix-run/eslint-config": "^2.5.0",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "azure-functions-core-tools": "^4.0.5455",
