chore(deps): upgrade to latest

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "format": "prettier --write index.js \"src/**/*.js\"",
     "lint": "TIMING=1 eslint --fix *.js src/",
-    "postinstall": "husky install",
+    "postinstall": "husky",
     "postpack": "pinst --enable",
     "prepack": "pinst --disable",
     "prepublishOnly": "tsc --emitDeclarationOnly",
@@ -48,14 +48,14 @@
     }
   },
   "devDependencies": {
-    "@azure/functions": "^4.1.0",
-    "@commitlint/cli": "^18.5.0",
-    "@commitlint/config-conventional": "^18.5.0",
-    "@commitlint/cz-commitlint": "^18.5.0",
-    "@remix-run/node": "^2.5.1",
+    "@azure/functions": "^4.2.0",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@commitlint/cz-commitlint": "^18.6.0",
+    "@remix-run/node": "^2.6.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node-lts": "^20.1.1",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@vitest/coverage-v8": "^1.2.2",
     "commitizen": "^4.3.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -63,7 +63,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-disable": "^2.0.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.0.2",
+    "eslint-plugin-jsdoc": "^48.0.5",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -71,17 +71,17 @@
     "eslint-plugin-security-node": "^1.1.4",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-unicorn": "^50.0.1",
-    "eslint-plugin-vitest": "^0.3.20",
-    "husky": "^8.0.3",
+    "eslint-plugin-unicorn": "^51.0.0",
+    "eslint-plugin-vitest": "^0.3.21",
+    "husky": "^9.0.10",
     "inquirer": "^8.2.6",
-    "lint-staged": "^15.2.0",
+    "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "ramda": "^0.29.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   },
   "engines": {
     "node": ">= 18"
