--- a/examples/azure-staticwebapp/package.json
+++ b/examples/azure-staticwebapp/package.json
@@ -13,27 +13,31 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/css-bundle": "^2.5.1",
-    "@remix-run/node": "^2.5.1",
-    "@remix-run/react": "^2.5.1",
-    "@remix-run/serve": "^2.5.1",
+    "@remix-run/css-bundle": "^2.8.1",
+    "@remix-run/node": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "@remix-run/serve": "^2.8.1",
     "@scandinavianairlines/remix-azure-functions": "^1.0.1",
     "isbot": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.1.6",
-    "@remix-run/dev": "^2.5.1",
-    "@remix-run/eslint-config": "^2.5.1",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "azure-functions-core-tools": "^4.0.5455",
-    "eslint": "^8.56.0",
+    "@azure/static-web-apps-cli": "^1.1.7",
+    "@remix-run/dev": "^2.8.1",
+    "@remix-run/eslint-config": "^2.8.1",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
+    "azure-functions-core-tools": "^4.0.5611",
+    "eslint": "^8.57.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "resolutions": {
+    "axios": ">0.28.1",
+    "got": ">12.1.0"
   }
 }
