--- a/examples/azure-staticwebapp-vite/package.json
+++ b/examples/azure-staticwebapp-vite/package.json
@@ -36,6 +36,9 @@
     "npm-run-all": "^4.1.5",
     "vite": "^5.1.0"
   },
+  "resolutions": {
+    "undici": ">=5.28.4"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
