--- a/examples/azure-staticwebapp-vite/server/package.json
+++ b/examples/azure-staticwebapp-vite/server/package.json
@@ -27,6 +27,9 @@
     "azure-functions-core-tools": "^4.0.5611",
     "vite": "^5.1.0"
   },
+  "resolutions": {
+    "undici": ">=5.28.4"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
