--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     }
   },
   "devDependencies": {
-    "@azure/functions": "^4.3.0",
+    "@azure/functions": "^4.4.0",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/cz-commitlint": "^19.2.0",
@@ -63,7 +63,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-disable": "^2.0.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.2",
+    "eslint-plugin-jsdoc": "^48.2.3",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -71,20 +71,23 @@
     "eslint-plugin-security-node": "^1.1.4",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unicorn": "^51.0.1",
-    "eslint-plugin-vitest": "^0.4.0",
+    "eslint-plugin-unicorn": "^52.0.0",
+    "eslint-plugin-vitest": "^0.4.1",
     "husky": "^9.0.11",
-    "inquirer": "^9.2.16",
+    "inquirer": "^9.2.17",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
     "prettier": "^3.2.5",
     "ramda": "^0.29.1",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.4",
     "vitest": "^1.4.0"
   },
   "engines": {
     "node": ">= 18"
+  },
+  "resolutions": {
+    "undici": ">=5.28.4"
   },
   "packageManager": "yarn@4.0.2"
 }
