chore(deps): upgrade depencies to latest

--- a/examples/azure-functions-v4/package.json
+++ b/examples/azure-functions-v4/package.json
@@ -39,8 +39,9 @@
     "node": ">=18.0.0"
   },
   "resolutions": {
-    "axios": ">0.28.1",
+    "axios": ">=0.28.0",
     "got": ">12.1.0",
-    "undici": ">=5.28.4"
+    "undici": ">=5.28.4",
+    "tar": ">=6.2.1"
   }
 }
