--- a/examples/azure-staticwebapp-vite/package.json
+++ b/examples/azure-staticwebapp-vite/package.json
@@ -37,7 +37,10 @@
     "vite": "^5.2.8"
   },
   "resolutions": {
-    "undici": ">=5.28.4"
+    "axios": ">=0.28.0",
+    "got": ">12.1.0",
+    "undici": ">=5.28.4",
+    "tar": ">=6.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
