--- a/package.json
+++ b/package.json
@@ -49,45 +49,47 @@
   },
   "devDependencies": {
     "@azure/functions": "^4.4.0",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
-    "@remix-run/node": "^2.8.1",
+    "@remix-run/node": "^2.9.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node-lts": "^20.1.3",
-    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/coverage-v8": "^1.5.3",
     "commitizen": "^4.3.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-disable": "^2.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.3",
-    "eslint-plugin-n": "^17.0.0",
+    "eslint-plugin-n": "^17.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security-node": "^1.1.4",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unicorn": "^52.0.0",
-    "eslint-plugin-vitest": "^0.4.1",
+    "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.0.11",
-    "inquirer": "^9.2.17",
+    "inquirer": "^9.2.20",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
     "prettier": "^3.2.5",
     "ramda": "^0.30.0",
-    "typescript": "^5.4.4",
-    "vitest": "^1.4.0"
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.3"
   },
   "engines": {
     "node": ">= 18"
   },
   "resolutions": {
-    "undici": ">=5.28.4"
+    "axios": ">=0.28.0",
+    "undici": ">=5.28.4",
+    "tar": ">=6.2.1"
   },
   "packageManager": "yarn@4.0.2"
 }
