--- a/examples/azure-staticwebapp/server/package.json
+++ b/examples/azure-staticwebapp/server/package.json
@@ -8,26 +8,29 @@
     "dev": "func start --cors-credentials --port 3030"
   },
   "dependencies": {
-    "@azure/functions": "^4.1.0",
-    "@remix-run/css-bundle": "^2.5.0",
-    "@remix-run/node": "^2.5.0",
-    "@remix-run/react": "^2.5.0",
-    "@remix-run/serve": "^2.5.0",
-    "@scandinavianairlines/remix-azure-functions": "^1.0.1",
-    "isbot": "^4.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@azure/functions": "^4.5.0",
+    "@remix-run/css-bundle": "^2.10.2",
+    "@remix-run/node": "^2.10.2",
+    "@remix-run/react": "^2.10.2",
+    "@remix-run/serve": "^2.10.2",
+    "@scandinavianairlines/remix-azure-functions": "^1.0.3",
+    "isbot": "^4.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.1.6",
-    "azure-functions-core-tools": "^4.0.5455"
+    "@azure/static-web-apps-cli": "^1.1.10",
+    "azure-functions-core-tools": "^4.0.5907"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "resolutions": {
-    "axios": ">0.28.1",
+    "axios": ">=0.28.0",
+    "braces": ">=3.0.3",
     "got": ">12.1.0",
-    "undici": ">=5.28.4"
+    "tar": ">=6.2.1",
+    "undici": ">=5.28.4",
+    "ws": ">= 7.5.10"
   }
 }
