--- a/examples/azure-staticwebapp-vite/package.json
+++ b/examples/azure-staticwebapp-vite/package.json
@@ -38,9 +38,11 @@
   },
   "resolutions": {
     "axios": ">=0.28.0",
+    "braces": ">=3.0.3",
     "got": ">12.1.0",
+    "tar": ">=6.2.1",
     "undici": ">=5.28.4",
-    "tar": ">=6.2.1"
+    "ws": ">= 7.5.10"
   },
   "engines": {
     "node": ">=18.0.0"
