--- a/examples/azure-staticwebapp/package.json
+++ b/examples/azure-staticwebapp/package.json
@@ -38,8 +38,10 @@
   },
   "resolutions": {
     "axios": ">=0.28.0",
+    "braces": ">=3.0.3",
     "got": ">12.1.0",
+    "tar": ">=6.2.1",
     "undici": ">=5.28.4",
-    "tar": ">=6.2.1"
+    "ws": ">= 7.5.10"
   }
 }
