--- a/package.json
+++ b/package.json
@@ -48,36 +48,36 @@
     }
   },
   "devDependencies": {
-    "@azure/functions": "^4.5.0",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/cz-commitlint": "^19.2.0",
+    "@azure/functions": "^4.5.1",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/cz-commitlint": "^19.4.0",
     "@eslint/eslintrc": "^3.1.0",
-    "@remix-run/node": "^2.10.2",
+    "@remix-run/node": "^2.11.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node-lts": "^20.1.3",
-    "@vitest/coverage-v8": "^2.0.1",
+    "@vitest/coverage-v8": "^2.0.5",
     "commitizen": "^4.3.0",
-    "eslint": "^9.6.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-disable": "^2.0.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.6.0",
-    "eslint-plugin-n": "^17.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^7.0.0",
+    "eslint-plugin-import-x": "^4.1.1",
+    "eslint-plugin-jsdoc": "^50.2.2",
+    "eslint-plugin-n": "^17.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-unicorn": "^55.0.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "husky": "^9.0.11",
-    "inquirer": "^10.1.4",
-    "lint-staged": "^15.2.7",
+    "husky": "^9.1.5",
+    "inquirer": "^10.1.8",
+    "lint-staged": "^15.2.9",
+    "neostandard": "^0.11.4",
     "pinst": "^3.0.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "ramda": "^0.30.1",
-    "typescript": "^5.5.3",
-    "vitest": "^2.0.1"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "engines": {
     "node": ">= 18"
@@ -87,5 +87,5 @@
     "undici": ">=5.28.4",
     "tar": ">=6.2.1"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.4.1"
 }
