chore(eslint): simplify eslint config rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,26 @@
 {
   "extends": "@tsconfig/node-lts/tsconfig.json",
   "compilerOptions": {
-    "allowJs": true,
-    "checkJs": true,
-    "declaration": true,
     "esModuleInterop": true,
-    "moduleResolution": "nodenext",
+    "skipLibCheck": true,
+    "target": "ES2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "module": "NodeNext",
+    "noEmit": true,
+    "checkJs": true,
+    "lib": ["ES2022"],
+    "moduleResolution": "NodeNext",
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "resolvePackageJsonExports": true,
+    "resolvePackageJsonImports": true,
     "outDir": "types/",
     "sourceMap": false,
     "types": ["vitest/globals"]
