--- a/examples/azure-staticwebapp-vite/package.json
+++ b/examples/azure-staticwebapp-vite/package.json
@@ -13,28 +13,28 @@
     "deploy": "swa deploy"
   },
   "dependencies": {
-    "@azure/functions": "^4.6.0",
-    "@remix-run/react": "^2.15.2",
+    "@azure/functions": "^4.7.2",
+    "@remix-run/react": "^2.16.7",
     "@scandinavianairlines/remix-azure-functions": "^1.0.3",
-    "isbot": "^5.1.20",
+    "isbot": "^5.1.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^2.0.2",
-    "@remix-run/dev": "^2.15.2",
-    "@remix-run/eslint-config": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "azure-functions-core-tools": "^4.0.6610",
-    "eslint": "^8.57.1",
+    "@azure/static-web-apps-cli": "^2.0.6",
+    "@remix-run/dev": "^2.16.7",
+    "@remix-run/eslint-config": "^2.16.7",
+    "@remix-run/serve": "^2.16.7",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "azure-functions-core-tools": "^4.0.7030",
+    "eslint": "^9.27.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "npm-run-all": "^4.1.5",
-    "vite": "^6.0.9"
+    "vite": "^6.3.5"
   },
   "resolutions": {
     "axios": ">=1.7.4",
@@ -49,6 +49,7 @@
     "ws": ">= 7.5.10"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=20.0.0"
+  },
+  "packageManager": "yarn@4.9.1"
 }
