--- a/examples/azure-staticwebapp/package.json
+++ b/examples/azure-staticwebapp/package.json
@@ -13,28 +13,28 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/css-bundle": "^2.15.2",
-    "@remix-run/node": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
+    "@remix-run/css-bundle": "^2.16.7",
+    "@remix-run/node": "^2.16.7",
+    "@remix-run/react": "^2.16.7",
+    "@remix-run/serve": "^2.16.7",
     "@scandinavianairlines/remix-azure-functions": "^1.0.3",
-    "isbot": "^5.1.20",
+    "isbot": "^5.1.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^2.0.2",
-    "@remix-run/dev": "^2.15.2",
-    "@remix-run/eslint-config": "^2.15.2",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
-    "azure-functions-core-tools": "^4.0.6610",
-    "eslint": "^8.57.1",
+    "@azure/static-web-apps-cli": "^2.0.6",
+    "@remix-run/dev": "^2.16.7",
+    "@remix-run/eslint-config": "^2.16.7",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "azure-functions-core-tools": "^4.0.7030",
+    "eslint": "^9.27.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "resolutions": {
     "axios": ">=1.7.4",
@@ -47,5 +47,6 @@
     "tar": ">=6.2.1",
     "undici": ">=5.28.4",
     "ws": ">= 7.5.10"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
