--- a/package.json
+++ b/package.json
@@ -39,48 +39,39 @@
     "types": "tsc --noEmit --checkJs"
   },
   "peerDependencies": {
-    "@azure/functions": ">=4.0.0",
-    "@remix-run/node": ">=2.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@azure/functions": {
-      "optional": true
-    }
+    "@remix-run/node": "2.x"
   },
   "devDependencies": {
-    "@azure/functions": "^4.6.0",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@commitlint/cz-commitlint": "^19.6.1",
-    "@eslint/eslintrc": "^3.2.0",
-    "@remix-run/node": "^2.15.2",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
-    "@tsconfig/node-lts": "^20.1.3",
-    "@vitest/coverage-v8": "^2.1.8",
+    "@azure/functions": "^4.7.2",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cz-commitlint": "^19.8.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@remix-run/node": "^2.16.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@tsconfig/node-lts": "^22.0.1",
+    "@vitest/coverage-v8": "^3.1.4",
     "commitizen": "^4.3.1",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-disable": "^2.0.3",
-    "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-jsdoc": "^50.6.1",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-jsdoc": "^50.6.17",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.1.7",
     "inquirer": "^9.3.7",
-    "lint-staged": "^15.3.0",
-    "neostandard": "^0.12.0",
+    "lint-staged": "^16.0.0",
+    "neostandard": "^0.12.1",
     "pinst": "^3.0.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "ramda": "^0.30.1",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4"
   },
   "engines": {
-    "node": ">= 18"
+    "node": ">= 20"
   },
   "resolutions": {
     "@eslint/plugin-kit": ">=0.2.3",
@@ -92,5 +83,5 @@
     "tar": ">=6.2.1",
     "undici": ">=5.28.4"
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.9.1"
 }
