chore(typescript): set `composite` true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node-lts/tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "target": "ES2022",
