--- a/package.json
+++ b/package.json
@@ -47,28 +47,28 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@remix-run/node": "^2.16.7",
+    "@remix-run/node": "^2.16.8",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@tsconfig/node-lts": "^22.0.1",
-    "@vitest/coverage-v8": "^3.1.4",
+    "@tsconfig/node-lts": "^22.0.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "commitizen": "^4.3.1",
-    "eslint": "^9.27.0",
+    "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-disable": "^2.0.3",
-    "eslint-plugin-jsdoc": "^50.6.17",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-jsdoc": "^51.3.4",
+    "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.1.7",
     "inquirer": "^9.3.7",
-    "lint-staged": "^16.0.0",
-    "neostandard": "^0.12.1",
+    "lint-staged": "^16.1.2",
+    "neostandard": "^0.12.2",
     "pinst": "^3.0.0",
-    "prettier": "^3.5.3",
-    "ramda": "^0.30.1",
+    "prettier": "^3.6.2",
+    "ramda": "^0.31.3",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">= 20"
@@ -81,7 +81,8 @@
     "nanoid": ">=3.3.8",
     "path-to-regexp": ">=0.1.12",
     "tar": ">=6.2.1",
-    "undici": ">=5.28.4"
+    "undici@5": ">=5.28.4",
+    "undici@6": ">=6.21.1"
   },
   "packageManager": "yarn@4.9.1"
 }
